# IGCAnalysis

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release-assets.yml
IGCAnalysis/: AsymPlotLib.py  __init__.py
IGCAnalysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
IGCAnalysis/Backup/: AsymPlotLib_V1.py
examples/: quickstart.py
tests/: test_AsymPlotLib.py  test_myfunctions.py
tools/: set_version.py
